# larkworks

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
algebra/: Cargo.toml
algebra/src/: domain.rs  field.rs  lattice.rs  lib.rs  macros.rs  matrix.rs  polynomial.rs  polynomial_ring.rs  prelude.rs  ring.rs  vector.rs
algebra/src/domain/: definition.rs  instance.rs
algebra/src/domain/instance/: d12289.rs  d202753.rs  d3168257.rs  goldilocks.rs
algebra/src/field/: definitions.rs  f12289.rs  f202753.rs  f3329.rs  f8380417.rs  instances.rs  macros.rs  zz.rs  zz_p.rs
algebra/src/field/instances/: f12289.rs  f202753.rs  f3168257.rs  f3329.rs  f8380417.rs  goldilocks.rs
algebra/src/polynomial/: core.rs  definition.rs  definitions.rs  instances.rs  poly12289.rs  poly202753.rs  poly3329.rs  zz_px.rs
algebra/src/polynomial/instances/: poly12289.rs  poly202753.rs  poly3162069.rs  poly3329.rs  polygoldilocks.rs
algebra/src/polynomial_ring/: core.rs  ring12289.rs  ring202753.rs
algebra/src/ring/: definition.rs  instances.rs
algebra/src/ring/instances/: ring12289.rs  ring202753.rs  ring3168257.rs  ringgoldilocks.rs
algebra/src/tests/: field.rs
algebra/src/vector/: core.rs  definition.rs  definitions.rs  instances.rs  zz_vec.rs
algebra/src/vector/instances/: vec12289.rs  vec202753.rs  vec3168257.rs  vec3329.rs  vecgoldilocks.rs
arithmetic/: Cargo.toml
arithmetic/src/: field.rs  lattice.rs  lib.rs  polynomial.rs  prelude.rs  ring.rs
arithmetic/src/field/: f12289.rs  macros.rs
arithmetic/src/polynomial/: core.rs
cpoly/: Makefile  build.rs
cpoly/c/: Makefile  params.h  poly.h  poly_ntt.c  test.c
cpoly/src/: bindings.rs
crypto_primitives/: Cargo.toml
crypto_primitives/src/: algebraic_hash.rs  lib.rs  prelude.rs  test.rs
crypto_primitives/src/algebraic_hash/: definitions.rs  instances.rs
crypto_primitives/src/algebraic_hash/instances/: ajtai.rs  chipmunk.rs
crypto_primitives/src/test/: algebraic_hash.rs
crypto_primitives/src/test/algebraic_hash/: ajtai.rs
polynomial/: Cargo.toml
polynomial/scripts/: ntt_param.sage
polynomial/src/: field.rs  lib.rs  ntt_param.rs  param.rs  poly.rs  poly_ntt.rs  ter_poly.rs
polynomial/src/derive/: field.rs  mod.rs  polynomial.rs  tests.rs
polynomial/src/field/: arithmetic.rs
primitives/: Cargo.toml
primitives/src/: hash.rs
primitives/src/hash/: sis_hash.rs
sage/: Kyber.sage  README.md  main.sage  main.sage.py  utils.sage
